--- a/ToDoList/todo-app/src/App.css
+++ b/ToDoList/todo-app/src/App.css
@@ -119,3 +119,55 @@ ul {
   align-items: center;
   margin: 10px 10px 10px 0;
 }
+
+body {
+    background: linear-gradient(
+        -45deg,
+        #ffffff,
+        #ffe4e9,
+        #fcc8e2,
+        #f6baed,
+        #efb0ff,
+        #d3a2ff,
+        #8eb8ff,
+        #91efff,
+        #d5f9ff
+    );
+    background-size: 400% 400%;
+    animation: gradient 9s ease infinite;
+    /* height: 100vh; */
+}
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* 스크롤바 */
+::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: transparent;
+  border-radius: 10px;
+}
+::-webkit-scrollbar
+{
+  width: 10px;
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  background-image: -webkit-gradient(linear,
+                     left bottom,
+                     left top,
+                     color-stop(0.44, rgb(122,153,217)),
+                     color-stop(0.72, rgb(73,125,189)),
+                     color-stop(0.86, rgb(28,58,148)));
+}
