--- a/Board/board-app/src/App.css
+++ b/Board/board-app/src/App.css
@@ -1,42 +1,81 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container { 
+    width: 1024px;
+    margin: 50px auto;
+}
+.btn { 
+    display: inline-block;
+    min-width: 100px;
+    min-height: 20px;
+    padding: 12px 24px;
+    background-color: inherit;
+    border: 1px solid black;
+    font-size: 14px;
+    font-weight: normal;
+    text-align: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+.btn:hover { 
+    background-color: black;
+    color: white;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+.btn:active { 
+    box-shadow: none;
+}
+/* List Component */
+table { 
+    border-collapse: collapse;
+    width: 100%; 
+    margin: 10px auto;
+}
+.pagination { 
+    margin: 50px auto;
+    display: flex;
+    justify-content: center;
+    column-gap: 10px;
+}
+.btn-page { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 8px;
+    background-color: aliceblue;
+    border-radius: 8px;
+    color: #666;
+}
+.btn-page.active,
+.btn-page:hover { 
+    text-decoration: none !important;
+    background-color: cyan;
+    color: black;
+}
+h1.title { 
+    text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.btn-box { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+input, textarea { 
+    font-size: var(--font-size-main);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.link { 
+    background-color: transparent;
+    color: black;
+    border: none;
+    font-size: var(--font-size-main);
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.flex-box { 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.flex-box .item { 
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
