--- a/Board/board-app/src/App.css
+++ b/Board/board-app/src/App.css
@@ -79,3 +79,23 @@ input, textarea {
     align-items: center;
     gap: 20px;
 }
+
+.file-img { 
+    width: 140px;
+    height: 78px;
+    object-fit: cover;
+}
+.badge { 
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    font-size: 14px;
+    color: white;
+    padding: 2px 4px;
+    background-color: red;
+    border-radius: 4px;
+}
+
+.item-img { 
+    position: relative;
+}
