--- a/Board/board-app/src/components/board/css/List.module.css
+++ b/Board/board-app/src/components/board/css/List.module.css
@@ -11,10 +11,12 @@
     background-color: lightskyblue;
 }
 .table th:nth-child(1),
-.table th:nth-child(1) { width: 10%;}
+.table td:nth-child(1) { width: 10%;}
 .table th:nth-child(2),
-.table th:nth-child(2) { width: 50%;}
+.table td:nth-child(2) { width: 10%;}
 .table th:nth-child(3),
-.table th:nth-child(3),
-.table th:nth-child(4) { width: 15%;}
-.table th:nth-child(4) { width: 25%;}
+.table td:nth-child(3) { width: 40%;}
+.table th:nth-child(4) ,
+.table td:nth-child(4) { width: 15%;}
+.table th:nth-child(5) ,
+.table td:nth-child(5) { width: 25%;}
